fix(font): fix font usage in project

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -14,6 +14,16 @@
 }
 
 @layer base {
+    * {
+      border-color: hsl(var(--border));
+    }
+
+    body {
+      color: hsl(var(--foreground));
+      background: hsl(var(--background));
+      font-feature-settings: "rlig" 1, "calt" 1;
+    }
+
     :root {
       --background: 0 0% 100%;
       --foreground: 240 10% 3.9%;
